2010-03-07  Štěpán Němec  <stepnem@gmail.com>  (tiny change)

	* vc-git.el (vc-git-annotate-extract-revision-at-line): Use
	vc-git-root as default direcotry for revision path (Bug#5657).

2010-03-06  Chong Yidong  <cyd@stupidchicken.com>

	* calculator.el (calculator): Don't bind split-window-keep-point
	(Bug#5674).

2010-03-06  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc-git.el: Re-flow to fit into 80 columns.
	(vc-git-after-dir-status-stage, vc-git-dir-status-goto-stage):
	Remove spurious `quote' element in each case alternative.
	(vc-git-show-log-entry): Use prog1.
	(vc-git-after-dir-status-stage): Remove unused var `remaining'.

2010-03-06  Glenn Morris  <rgm@gnu.org>

	* cedet/semantic/grammar.el (semantic-grammar-header-template):
	Update template copyright to GPLv3+.

2010-03-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* man.el (Man-files-regexp): Tighten up the regexp (bug#5686).

2010-03-03  Chong Yidong  <cyd@stupidchicken.com>

	* macros.el (insert-kbd-macro): Look up keyboard macro using the
	definition, not the name (Bug#5481).

2010-03-03  Štěpán Němec  <stepnem@gmail.com>  (tiny change)

	* subr.el (momentary-string-display): Don't overwrite the MESSAGE
	argument with a local variable.  (Bug#5670)

2010-03-02  Juri Linkov  <juri@jurta.org>

	* info.el (Info-index-next): Decrement line number by 2.  (Bug#5652)

2010-03-02  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-do-copy-or-rename-file-out-of-band): Fix an
	error when FILENAME and NEWNAME are existing remote directories.

	* net/tramp-compat.el (tramp-compat-make-temp-file): Add optional
	parameter DIR-FLAG.

2010-03-02  Glenn Morris  <rgm@gnu.org>

	* calendar/cal-hebrew.el (holiday-hebrew-passover): Fix date
	of Yom HaAtzma'ut when it falls on a Monday (rule changed in 2004).

2010-03-01  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-engine.el (c-remove-stale-state-cache):
	Correct previous patch.

2010-03-01  Kenichi Handa  <handa@m17n.org>
